plugins {
    id 'java'
}

group 'com.notaneye.learn'
version '1.0.0'

java {
    // Set our compatibility version
    sourceCompatibility = JavaVersion.VERSION_15
    targetCompatibility = JavaVersion.VERSION_15
    withJavadocJar()
    withSourcesJar()
}

// Enable preview features
tasks.withType(JavaCompile) {
    options.compilerArgs += '--enable-preview'
}
tasks.withType(Test) {
    jvmArgs += '--enable-preview'
}
tasks.withType(Javadoc) {
    options {
        memberLevel = JavadocMemberLevel.PRIVATE
        addBooleanOption('-enable-preview', true)
        addStringOption('-release', '15')
    }
}
tasks.withType(JavaExec) {
    jvmArgs += '--enable-preview'
    // jvmArgs += '-Xlog'
}

repositories {
    mavenCentral()
}

dependencies {
}
